2004-03-08  Ziemowit Laski  <zlaski@apple.com>

	Sync up with HEAD:2004-03-06T01:00.

2004-03-04  Ziemowit Laski  <zlaski@apple.com>

	* Make-lang.in (cp/parser.o): Depend on c-common.h.
	* decl.c (get_current_scope): Rename to objc_get_current_scope().
	* lex.c (D_OBJC): New token table mask.
	(reswords): Add Objective-C++ reserved words.
	(init_reswords): Use D_OBJC in mask.
	* parser.c: Include c-common.h.
	(cp_lexer_get_preprocessor_token): Detect presence of
	Objective-C++ reserved words.
	(cp_parser_objc_message_receiver, cp_parser_objc_message_args,
	cp_parser_objc_message_expression, cp_parser_objc_literal_expression,
	cp_parser_objc_encode_expression, cp_parser_objc_protocol_expression,
	cp_parser_objc_selector_expression, cp_parser_objc_expression,
	cp_parser_objc_visiblity_spec, cp_parser_objc_method_type,
	cp_parser_objc_typename, cp_parser_objc_selector_p,
	cp_parser_objc_selector, cp_parser_objc_method_keyword_params,
	cp_parser_objc_method_tail_params_opt, cp_parser_method_signature,
	cp_parser_objc_method_prototype_list, cp_parser_method_definition_list,
	cp_parser_objc_class_ivars, cp_parser_objc_identifier_list,
	cp_parser_objc_alias_declaration, cp_parser_objc_class_declaration,
	cp_parser_objc_protocol_declaration, cp_parser_objc_superclass_or_category,
	cp_parser_objc_class_interface, cp_parser_objc_class_implementation,
	cp_parser_objc_end_implementation, cp_parser_objc_declaration):
	New nonterminals/functions.
	(cp_parser_primary_expression): Call cp_parser_objc_expression().
	(cp_parser_declaration): Call cp_parser_objc_declaration().
	(cp_parser_parameter_declaration_list): Allow parameter list to
	be terminated by ';' and '{', in addition to '....' and ')'.
	* typeck.c (comptypes): Call objc_comptypes().

2004-02-03  Ziemowit Laski  <zlaski@apple.com>

        Sync up with HEAD:2004-02-02.

2004-03-05  Jason Merrill  <jason@redhat.com>

	* tree.c (list_hash_pieces): s/TYPE_HASH/TREE_HASH/.

2004-03-04  Geoffrey Keating  <geoffk@apple.com>