@@ -1,3 +1,8 @@
+2004-03-09  Ziemowit Laski  <zlaski@apple.com>
+
+	* lang-specs.h: Add informative blurb about cp/lang-specs.h.
+	(OBJCPLUSPLUS_CPP_SPEC): Rename to CPLUSPLUS_CPP_SPEC.
+
 2004-03-04  Ziemowit Laski  <zlaski@apple.com>
 
 	* Make-lang.in (lang_checks): Rename 'check-objc++' to
