@@ -1,3 +1,7 @@
+2004-03-09  Ziemowit Laski  <zlaski@apple.com>
+
+	* lang-specs.h: Add informative blurb about objcp/lang-specs.h.
+
 2004-03-08  Ziemowit Laski  <zlaski@apple.com>
 
 	Sync up with HEAD:2004-03-06T01:00.
